Fix child block style broken in a previous commit

--- a/src/sass/site/_posts-and-pages.scss
+++ b/src/sass/site/_posts-and-pages.scss
@@ -135,7 +135,9 @@
 .wp-block-column,
 .wp-block-cover__inner-container,
 .wp-block-group__inner-container {
-  margin-bottom: $spacer;
+  > * {
+    margin-bottom: $spacer;
+  }
 
   >:last-child() {
     margin-bottom: 0;
